# FillDoc

./: .gitignore  README.md  build.bat  build.ps1  codex-chat-pull.bat  codex-chat-push.bat  codex-chat-repair-paths.bat  codex-chat-status.bat  codex-chat-sync.bat  main.py  pyproject.toml  requirements.txt  run_filldoc.bat  Техническое задание FillDoc.md
docs/: ARCHITECTURE.md  CODEX_CHAT_SYNC.md  EXCEL_FORMAT.md  HOME_CODEX_SYNC_SETUP.md  ROADMAP.md  TEMPLATE_FORMAT.md  USER_GUIDE.md
src/filldoc/: app.py
src/filldoc/core/: errors.py  logging_setup.py  settings.py
src/filldoc/data/: __init__.py  default_variables.json
src/filldoc/excel/: __init__.py  excel_store.py  models.py
src/filldoc/fill/: __init__.py  missing_fields.py
src/filldoc/generator/: __init__.py  docx_generator.py  filename_rules.py
src/filldoc/projects/: __init__.py  archive_service.py  docs_paths.py  json_import.py  repository.py
src/filldoc/templates/: __init__.py  models.py  quality.py  scanner.py  vars_extractor.py
src/filldoc/ui/: icons.py  (+2 more)
tests/: test_backup_rotation.py  test_docx_generator.py  test_excel_store.py  test_excel_store_stage2.py  test_output_name_rule.py  test_project_repository.py  test_projects_docs_paths.py  test_projects_json_import.py  test_scanner.py  test_template_quality.py  test_variable_dictionary.py  test_vars_extractor.py
tools/: codex-chat-sync.ps1  codex-sqlite-path-repair.py  create_preview_excel.ps1
tools/codex-chat-sync/: README-RU.md  export-filldoc-chats.ps1  import-filldoc-chats.ps1  repair-filldoc-chat-paths.ps1  sync_filldoc_chats.py
(+10 files in other folders)
